# jackbox-russifier-auto-installer-macos

./: README.md  pyproject.toml
src/jackbox_auto_russifier/: __init__.py  main.py
