[project]
name = "jackbox-auto-russifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "tqdm>=4.67.2",
]

[project.scripts]
jackbox-auto-russifier = "jackbox_auto_russifier.main:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

# Linting rules
lint.select = ["E", "F", "B", "I", "C4", "UP"]

# Formatting rules (makes ruff act like black + isort)
lint.extend-select = ["Q", "W191", "W291", "W292", "W293", "W605"]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports allowed in __init__.py
"tests/*" = ["S101"]      # Allow asserts in tests
